--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ img.emoji {
 	
 </div>
 
-</header><main class="wp-block-group has-global-padding is-layout-constrained" style="margin-top:var(--wp--preset--spacing--50);margin-bottom:var(--wp--preset--spacing--70)"><h1 class="alignwide wp-block-heading" style="margin-bottom:var(--wp--preset--spacing--60)">Mindblown: a blog about philosophy.</h1>
+</header><main class="wp-block-group has-global-padding is-layout-constrained" style="margin-top:var(--wp--preset--spacing--50);margin-bottom:var(--wp--preset--spacing--70)"><h1 class="alignwide wp-block-heading" style="margin-bottom:var(--wp--preset--spacing--60)">adasdasdas.</h1>
 	
 
 	
